w10/W10-D1_RBAC_Admission_Policy/policies/required-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: workload-required-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - mini-platform
  parameters:
    labels:
      - app.kubernetes.io/name
      - app.kubernetes.io/owner
